# Bluesky-Intelligence-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  REPORT.md  compose-deploy.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: saudi_aramco_context.json
notebooks/: api_exploration.ipynb
scripts/: Dockerfile  Dockerfile.deploy  bluesky_ingestion.py
src/: Dockerfile  Dockerfile.deploy  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/posts/: route.ts
src/app/api/posts/[id]/: route.ts
src/app/api/stream/: route.ts
src/components/: EventsTable.tsx
src/lib/: db.ts
tests/integration/: api.posts.integration.test.ts
tests/unit/: api.posts.[id].test.ts  api.posts.test.ts
